# socialmedia

./: newfile3d
dailyvids/: .env.example  README.md  dailyvids.sqlite3  pyproject.toml
dailyvids/config/: config.json
dailyvids/dailyvids/: __init__.py  captions.py  cli.py  db.py  generator.py  ingest.py  scheduler.py  server.py
dailyvids/dailyvids/config/: __init__.py
dailyvids/dailyvids/publishers/: __init__.py  console.py  youtube_stub.py
dailyvids/scripts/: dev.sh
dailyvids/static/: style.css
dailyvids/templates/: index.html
dailyvids/webclient/: index.html
